fix: nowrap

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,3 +22,10 @@
 .grey-bg {
     background-color: color($colors, light) !important;
 }
+
+.alert-radio-label{
+    white-space: pre-wrap !important;
+}
+.alert-checkbox-label{
+    white-space: pre-wrap;
+}
